--- a/template/template.html.jinja
+++ b/template/template.html.jinja
@@ -4,7 +4,7 @@
 
 <head>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-
+    <meta name="generator" content="FolioWatch Folio Update" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>{{ title }}</title>
 
